trunk/tests/kiama/negative/name_errors/L1/7_type1.ob
MODULE type;

CONST
    aconst1 = 10;

TYPE
    atype4 = aconst1;

END type.
